--- a/foodgram.css
+++ b/foodgram.css
@@ -9,7 +9,17 @@ ul {
 	height: 110px;
 	color: white;
 	box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.49);
-	font-family: 
+	font-family: 'Roboto';
+}
+
+/*h6 {
+    font-family: 'Roboto';
+    font-size: 20px;
+}*/
+
+#text1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: x-large;
 }
 
 #main {
@@ -19,6 +29,8 @@ ul {
 
 #col1 {
 	background: #FAFAFA;
+    font-family: 'Roboto';
+    font-size: 15px;
 }
 
 #col2 {
@@ -39,3 +51,23 @@ ul {
     margin-right: 20px;
     border-color: white;
  }
+
+/* .thumbnail:hover {
+   moz-transform:scale(2); 
+-webkit-transform:scale(2);
+-o-transform:scale(2);
+}*/
+
+/*.thumbnail img{
+margin:50px;
+height:100px;
+width:100px;
+-moz-transition:-moz-transform 0.5s ease-in; 
+-webkit-transition:-webkit-transform 0.5s ease-in; 
+-o-transition:-o-transform 0.5s ease-in;
+}
+.thumbnail img:hover{
+-moz-transform:scale(2); 
+-webkit-transform:scale(2);
+-o-transform:scale(2);
+}*/
