--- a/foodgram.css
+++ b/foodgram.css
@@ -37,10 +37,10 @@ ul {
 	background: #FAFAFA;
 }
 
-/*.navbar {
-	margin-top: 20px;
-    color: black;
-}*/
+.addthis_sharing_toolbox {
+    display: inline;
+    float: right;
+}
 
 .thumbnail {
     width: 250px;
@@ -52,22 +52,4 @@ ul {
     border-color: white;
  }
 
-/* .thumbnail:hover {
-   moz-transform:scale(2); 
--webkit-transform:scale(2);
--o-transform:scale(2);
-}*/
-
-/*.thumbnail img{
-margin:50px;
-height:100px;
-width:100px;
--moz-transition:-moz-transform 0.5s ease-in; 
--webkit-transition:-webkit-transform 0.5s ease-in; 
--o-transition:-o-transform 0.5s ease-in;
-}
-.thumbnail img:hover{
--moz-transform:scale(2); 
--webkit-transform:scale(2);
--o-transform:scale(2);
-}*/
+ 
